# libcmp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
chainer/: cbase.h  cformat.hpp  csearch.hpp
include/: bin_cmp.h
utils/: varray.h  varray.hpp
